Fix image stretching on mobile devices

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -28,6 +28,7 @@
 
 .card__image {
   border-radius: 10px;
+  width: 100%;
 }
 
 .card__review:before {
@@ -52,5 +53,10 @@
   .card {
     margin-right: 20px;
     max-width: 170px;
+  }
+
+  .card__image {
+    height: 100%;
+    width: auto;
   }
 }
